cookbooks/iptables/templates/default/rules.v4
# Generated by iptables-save v1.4.12 on Fri Feb 22 16:35:20 2013
*mangle
:PREROUTING ACCEPT [577:39988]
:INPUT ACCEPT [577:39988]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [449:80612]
:POSTROUTING ACCEPT [444:79872]
COMMIT
# Completed on Fri Feb 22 16:35:20 2013
# Generated by iptables-save v1.4.12 on Fri Feb 22 16:35:20 2013
*nat
:PREROUTING ACCEPT [1:100]
:INPUT ACCEPT [1:100]
:OUTPUT ACCEPT [5:740]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Fri Feb 22 16:35:20 2013
# Generated by iptables-save v1.4.12 on Fri Feb 22 16:35:20 2013
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [5:740]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 172.16.6.100/32 -i eth0 -p udp -m state --state ESTABLISHED -m udp --sport 53 --dport 53 -j ACCEPT
-A INPUT -s 172.16.6.100/32 -i eth0 -p udp -m state --state ESTABLISHED -m udp --sport 53 --dport 1024:65535 -j ACCEPT
-A INPUT -s 172.16.6.99/32 -i eth0 -p udp -m state --state ESTABLISHED -m udp --sport 53 --dport 53 -j ACCEPT
-A INPUT -s 172.16.6.99/32 -i eth0 -p udp -m state --state ESTABLISHED -m udp --sport 53 --dport 1024:65535 -j ACCEPT
-A INPUT -s 172.16.1.19/32 -i eth0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --sport 1024:65535 --dport 22 -j ACCEPT
-A INPUT -s 172.16.1.4/32 -i eth0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --sport 1024:65535 --dport 22 -j ACCEPT
-A INPUT -s 172.17.1.4/32 -i eth0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --sport 1024:65535 --dport 22 -j ACCEPT
-A INPUT -s 172.16.1.18/32 -i eth0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --sport 1024:65535 --dport 22 -j ACCEPT
-A INPUT -s 172.16.1.19/32 -i eth0 -p tcp -m state --state ESTABLISHED -m tcp --sport 80 -j ACCEPT
-A INPUT -s 172.16.1.19/32 -i eth0 -p tcp -m state --state ESTABLISHED -m tcp --sport 1024:65535 -j ACCEPT
-A INPUT -s 172.16.6.100/32 -i eth0 -p tcp -m state --state ESTABLISHED -m tcp --dport 123 -j ACCEPT
-A INPUT -s 172.16.6.99/32 -i eth0 -p tcp -m state --state ESTABLISHED -m tcp --dport 123 -j ACCEPT
-A INPUT -s 172.16.1.18/32 -i eth0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 1024:65535 -j ACCEPT
-A INPUT -s 172.16.1.18/32 -i eth0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 1270 -j ACCEPT
-A FORWARD -i lo -j DROP
-A FORWARD -o lo -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -d 172.16.6.100/32 -o eth0 -p udp -m state --state NEW,ESTABLISHED -m udp --sport 53 --dport 53 -j ACCEPT
-A OUTPUT -d 172.16.6.100/32 -o eth0 -p udp -m state --state NEW,ESTABLISHED -m udp --sport 1024:65535 --dport 53 -j ACCEPT
-A OUTPUT -d 172.16.6.99/32 -o eth0 -p udp -m state --state NEW,ESTABLISHED -m udp --sport 53 --dport 53 -j ACCEPT
-A OUTPUT -d 172.16.6.99/32 -o eth0 -p udp -m state --state NEW,ESTABLISHED -m udp --sport 1024:65535 --dport 53 -j ACCEPT
-A OUTPUT -d 172.16.1.19/32 -o eth0 -p tcp -m state --state ESTABLISHED -m tcp --sport 22 --dport 1024:65535 -j ACCEPT
-A OUTPUT -d 172.16.1.4/32 -o eth0 -p tcp -m state --state ESTABLISHED -m tcp --sport 22 --dport 1024:65535 -j ACCEPT
-A OUTPUT -d 172.17.1.4/32 -o eth0 -p tcp -m state --state ESTABLISHED -m tcp --sport 22 --dport 1024:65535 -j ACCEPT
-A OUTPUT -d 172.16.1.18/32 -o eth0 -p tcp -m state --state ESTABLISHED -m tcp --sport 22 --dport 1024:65535 -j ACCEPT
-A OUTPUT -d 172.16.1.19/32 -o eth0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 80 -j ACCEPT
-A OUTPUT -d 172.16.1.4/32 -o eth0 -p udp -m state --state NEW,ESTABLISHED -m udp --dport 514 -j ACCEPT
-A OUTPUT -d 172.16.1.19/32 -o eth0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 4000 -j ACCEPT
-A OUTPUT -d 172.16.6.100/32 -o eth0 -p udp -m state --state NEW,ESTABLISHED -m udp --dport 123 -j ACCEPT
-A OUTPUT -d 172.16.6.99/32 -o eth0 -p udp -m state --state NEW,ESTABLISHED -m udp --dport 123 -j ACCEPT
-A OUTPUT -d 172.16.1.18/32 -o eth0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 1270 -j ACCEPT
COMMIT
