cookbooks/iptables/templates/default/rulesx.v4
# Generated by iptables-save v1.4.12 on Thu Feb 28 12:29:22 2013
*mangle
:PREROUTING ACCEPT [593:56056]
:INPUT ACCEPT [593:56056]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [566:102190]
:POSTROUTING ACCEPT [503:97186]
COMMIT
# Completed on Thu Feb 28 12:29:22 2013
# Generated by iptables-save v1.4.12 on Thu Feb 28 12:29:22 2013
*nat
:PREROUTING ACCEPT [4:618]
:INPUT ACCEPT [2:160]
:OUTPUT ACCEPT [155:11310]
:POSTROUTING ACCEPT [92:6306]
COMMIT
# Completed on Thu Feb 28 12:29:22 2013
# Generated by iptables-save v1.4.12 on Thu Feb 28 12:29:22 2013
*filter
:INPUT DROP [3:498]
:FORWARD DROP [0:0]
:OUTPUT DROP [63:5004]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 172.16.6.100/32 -i bond0 -p udp -m state --state ESTABLISHED -m udp --sport 53 --dport 53 -j ACCEPT
-A INPUT -s 172.16.6.100/32 -i bond0 -p udp -m state --state ESTABLISHED -m udp --sport 53 --dport 1024:65535 -j ACCEPT
-A INPUT -s 172.17.6.99/32 -i bond0 -p udp -m state --state ESTABLISHED -m udp --sport 53 --dport 53 -j ACCEPT
-A INPUT -s 172.17.6.99/32 -i bond0 -p udp -m state --state ESTABLISHED -m udp --sport 53 --dport 1024:65535 -j ACCEPT
-A INPUT -s 172.16.1.19/32 -i bond0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --sport 1024:65535 --dport 22 -j ACCEPT
-A INPUT -s 172.16.1.4/32 -i bond0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --sport 1024:65535 --dport 22 -j ACCEPT
-A INPUT -s 172.17.1.4/32 -i bond0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --sport 1024:65535 --dport 22 -j ACCEPT
-A INPUT -s 172.17.1.18/32 -i bond0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --sport 1024:65535 --dport 22 -j ACCEPT
-A INPUT -s 172.17.1.26/32 -i bond0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --sport 1024:65535 --dport 22 -j ACCEPT

-A INPUT -s 172.16.6.101/32 -i bond0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --sport 1024:65535 --dport 161 -j ACCEPT
-A INPUT -s 172.16.6.101/32 -i bond0 -p tcp -m state --state NEW,ESTABLISHED -m udp --sport 1024:65535 --dport 161 -j ACCEPT

-A INPUT -s 172.17.6.101/32 -i bond0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --sport 1024:65535 --dport 161 -j ACCEPT
-A INPUT -s 172.17.6.101/32 -i bond0 -p tcp -m state --state NEW,ESTABLISHED -m udp --sport 1024:65535 --dport 161 -j ACCEPT

-A INPUT -s 172.16.1.19/32 -i bond0 -p tcp -m state --state ESTABLISHED -m tcp --sport 80 -j ACCEPT
-A INPUT -s 172.16.1.19/32 -i bond0 -p tcp -m state --state ESTABLISHED -m tcp --sport 1024:65535 -j ACCEPT
-A INPUT -s 172.16.6.100/32 -i bond0 -p tcp -m state --state ESTABLISHED -m tcp --dport 123 -j ACCEPT
-A INPUT -s 172.16.6.99/32 -i bond0 -p tcp -m state --state ESTABLISHED -m tcp --dport 123 -j ACCEPT
-A INPUT -s 172.17.6.100/32 -i bond0 -p tcp -m state --state ESTABLISHED -m tcp --dport 123 -j ACCEPT
-A INPUT -s 172.17.6.99/32 -i bond0 -p tcp -m state --state ESTABLISHED -m tcp --dport 123 -j ACCEPT
-A INPUT -s 172.16.1.18/32 -i bond0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 1024:65535 -j ACCEPT
-A INPUT -s 172.16.1.18/32 -i bond0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 1270 -j ACCEPT
-A INPUT -s 172.17.1.18/32 -i bond0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 1024:65535 -j ACCEPT
-A INPUT -s 172.17.1.18/32 -i bond0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 1270 -j ACCEPT
-A INPUT -j LOG --log-prefix "IPT-INPUT_UNEXPECTED: "
-A FORWARD -i lo -j DROP
-A FORWARD -o lo -j DROP
-A FORWARD -j LOG --log-prefix "IPT-FORWARD_UNEXPECTED: "
-A OUTPUT -o lo -j ACCEPT

-A OUTPUT -d 172.16.6.101/32 -o bond0 -p udp -m state --state NEW,ESTABLISHED -m udp --sport 1024:65535 --dport 161 -j ACCEPT
-A OUTPUT -d 172.16.6.101/32 -o bond0 -p udp -m state --state NEW,ESTABLISHED -m tcp --sport 1024:65535 --dport 161 -j ACCEPT

-A OUTPUT -d 172.17.6.101/32 -o bond0 -p udp -m state --state NEW,ESTABLISHED -m udp --sport 1024:65535 --dport 161 -j ACCEPT
-A OUTPUT -d 172.17.6.101/32 -o bond0 -p udp -m state --state NEW,ESTABLISHED -m tcp --sport 1024:65535 --dport 161 -j ACCEPT

-A OUTPUT -d 172.16.6.100/32 -o bond0 -p udp -m state --state NEW,ESTABLISHED -m udp --sport 53 --dport 53 -j ACCEPT
-A OUTPUT -d 172.16.6.100/32 -o bond0 -p udp -m state --state NEW,ESTABLISHED -m udp --sport 1024:65535 --dport 53 -j ACCEPT
-A OUTPUT -d 172.17.6.99/32 -o bond0 -p udp -m state --state NEW,ESTABLISHED -m udp --sport 53 --dport 53 -j ACCEPT
-A OUTPUT -d 172.17.6.99/32 -o bond0 -p udp -m state --state NEW,ESTABLISHED -m udp --sport 1024:65535 --dport 53 -j ACCEPT
-A OUTPUT -d 172.16.1.19/32 -o bond0 -p tcp -m state --state ESTABLISHED -m tcp --sport 22 --dport 1024:65535 -j ACCEPT
-A OUTPUT -d 172.16.1.4/32 -o bond0 -p tcp -m state --state ESTABLISHED -m tcp --sport 22 --dport 1024:65535 -j ACCEPT
-A OUTPUT -d 172.17.1.4/32 -o bond0 -p tcp -m state --state ESTABLISHED -m tcp --sport 22 --dport 1024:65535 -j ACCEPT
-A OUTPUT -d 172.17.1.18/32 -o bond0 -p tcp -m state --state ESTABLISHED -m tcp --sport 22 --dport 1024:65535 -j ACCEPT
-A OUTPUT -d 172.17.1.26/32 -o bond0 -p tcp -m state --state ESTABLISHED -m tcp --sport 22 --dport 1024:65535 -j ACCEPT
-A OUTPUT -d 172.16.1.19/32 -o bond0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 80 -j ACCEPT
-A OUTPUT -d 172.16.1.4/32 -o bond0 -p udp -m state --state NEW,ESTABLISHED -m udp --dport 514 -j ACCEPT
-A OUTPUT -d 172.17.1.4/32 -o bond0 -p udp -m state --state NEW,ESTABLISHED -m udp --dport 514 -j ACCEPT
-A OUTPUT -d 172.16.1.19/32 -o bond0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 4000 -j ACCEPT
-A OUTPUT -d 172.16.6.100/32 -o bond0 -p udp -m state --state NEW,ESTABLISHED -m udp --dport 123 -j ACCEPT
-A OUTPUT -d 172.16.6.99/32 -o bond0 -p udp -m state --state NEW,ESTABLISHED -m udp --dport 123 -j ACCEPT
-A OUTPUT -d 172.17.6.100/32 -o bond0 -p udp -m state --state NEW,ESTABLISHED -m udp --dport 123 -j ACCEPT
-A OUTPUT -d 172.17.6.99/32 -o bond0 -p udp -m state --state NEW,ESTABLISHED -m udp --dport 123 -j ACCEPT
-A OUTPUT -d 172.16.1.18/32 -o bond0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 1270 -j ACCEPT
-A OUTPUT -d 172.17.1.18/32 -o bond0 -p tcp -m state --state NEW,ESTABLISHED -m tcp --dport 1270 -j ACCEPT
-A OUTPUT -j LOG --log-prefix "IPT-OUTPUT_UNEXPECTED: "
COMMIT
# Completed on Thu Feb 28 12:29:22 2013
